--- a/resources/is_IS.locale/Localized.strings
+++ b/resources/is_IS.locale/Localized.strings
@@ -1,14 +1,30 @@
-#Fri May 10 10:40:17 GMT+00:00 2002
-mv.folder=Mappa
-use_image=Nota mynd
-mv.file.deleted=Skr\u00E1nni var eytt
-mv.use=Nota
-new_image=N\u00FD mynd
-mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
+close=Loka
+me.uploadtext=Veldu skr\u00E1 til a\u00F0 hla\u00F0a inn.
 mediafoldereditwindow.folder.saved=Mappa b\u00FAin til
 mediafoldereditwindow.name.the.folder=Nefndu m\u00F6ppuna
-mv.delete=Ey\u00F0a
-mv.cancel=H\u00E6tta vi\u00F0
-mv.upload=Hla\u00F0a inn
-me.uploadtext=Veldu skr\u00E1 til a\u00F0 hla\u00F0a inn.
+mediafoldereditwindow.properties=Eiginleikar
+mediafoldereditwindow.properties.created=B\u00FAi\u00F0 til
+mediafoldereditwindow.properties.description=L\u00FDsing
+mediafoldereditwindow.properties.filename=Skr\u00E1arnafn
+mediafoldereditwindow.properties.location=Sta\u00F0setning
+mediafoldereditwindow.properties.metadata=L\u00FDsig\u00F6gn
+mediafoldereditwindow.properties.metadata.key=Lykill
+mediafoldereditwindow.properties.metadata.remove=Fjarl\u00E6gja
+mediafoldereditwindow.properties.metadata.value=Gildi
+mediafoldereditwindow.properties.mimetype=Ger\u00F0 (Mime-type)
+mediafoldereditwindow.properties.modified=Breytt
+mediafoldereditwindow.properties.size=St\u00E6r\u00F0
+mediafoldereditwindow.properties.type=Ger\u00F0
+mv.cancel=Haetta vid
+mv.delete=Eyda
+mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
+mv.file.deleted=Skr\u00E1nni var eytt
+mv.folder=Mappa
+mv.properties=Eiginleikar
 mv.save=Vista
+mv.upload=Hlada inn
+mv.use=Nota
+new_image=N\u00FD mynd
+uploader.window.select=Velja
+use_image=Nota mynd
+wrong_confirm=
