--- a/resources/is_IS.locale/Localized.strings
+++ b/resources/is_IS.locale/Localized.strings
@@ -11,20 +11,20 @@ mediafoldereditwindow.properties.metadata=L\u00FDsig\u00F6gn
 mediafoldereditwindow.properties.metadata.key=Lykill
 mediafoldereditwindow.properties.metadata.remove=Fjarl\u00E6gja
 mediafoldereditwindow.properties.metadata.value=Gildi
-mediafoldereditwindow.properties.mimetype=Ger\u00F0 (Mime-type)
-mediafoldereditwindow.properties.modified=Breytt
-mediafoldereditwindow.properties.size=St\u00E6r\u00F0
-mediafoldereditwindow.properties.type=Ger\u00F0
+mediafoldereditwindow.properties.mimetype=Mimetype
+mediafoldereditwindow.properties.modified=Modified
+mediafoldereditwindow.properties.size=Size
+mediafoldereditwindow.properties.type=Type
 mv.cancel=Haetta vid
 mv.delete=Eyda
 mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
 mv.file.deleted=Skr\u00E1nni var eytt
 mv.folder=Mappa
-mv.properties=Eiginleikar
+mv.properties=properties
 mv.save=Vista
 mv.upload=Hlada inn
 mv.use=Nota
 new_image=N\u00FD mynd
-uploader.window.select=Velja
+uploader.window.select=
 use_image=Nota mynd
 wrong_confirm=
