Update from felixtest

--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -1,6 +1,8 @@
 close=
 login_text=
+me.submit=Submit
 me.uploadtext=Select a file to upload.
+media_chooser_window.media_chooser=Media chooser
 mediafoldereditwindow.folder.saved=Folder created
 mediafoldereditwindow.name.the.folder=Name the folder
 mediafoldereditwindow.properties=
@@ -16,11 +18,14 @@ mediafoldereditwindow.properties.mimetype=
 mediafoldereditwindow.properties.modified=
 mediafoldereditwindow.properties.size=
 mediafoldereditwindow.properties.type=
+mediaviewer.current_file=The current file is
+mediaviewer.current_folder=The current folder is
 mv.cancel=cancel
 mv.delete=delete
 mv.file.are.you.sure=Are you sure you want to delete this file
 mv.file.deleted=The file was deleted
 mv.folder=folder
+mv.move=move
 mv.properties=
 mv.save=save
 mv.upload=upload
