--- a/resources/is_IS.locale/Localized.strings
+++ b/resources/is_IS.locale/Localized.strings
@@ -1,5 +1,7 @@
 close=Loka
+me.submit=Vista
 me.uploadtext=Veldu skr\u00E1 til a\u00F0 hla\u00F0a inn.
+media_chooser_window.media_chooser=Skr\u00E1arstj\u00F3ri
 mediafoldereditwindow.folder.saved=Mappa b\u00FAin til
 mediafoldereditwindow.name.the.folder=Nefndu m\u00F6ppuna
 mediafoldereditwindow.properties=Eiginleikar
@@ -11,20 +13,23 @@ mediafoldereditwindow.properties.metadata=L\u00FDsig\u00F6gn
 mediafoldereditwindow.properties.metadata.key=Lykill
 mediafoldereditwindow.properties.metadata.remove=Fjarl\u00E6gja
 mediafoldereditwindow.properties.metadata.value=Gildi
-mediafoldereditwindow.properties.mimetype=Mimetype
-mediafoldereditwindow.properties.modified=Modified
-mediafoldereditwindow.properties.size=Size
-mediafoldereditwindow.properties.type=Type
+mediafoldereditwindow.properties.mimetype=Ger\u00F0 (Mime-type)
+mediafoldereditwindow.properties.modified=Breytt
+mediafoldereditwindow.properties.size=St\u00E6r\u00F0
+mediafoldereditwindow.properties.type=Ger\u00F0
+mediaviewer.current_file=Valin skr\u00E1 er
+mediaviewer.current_folder=Valin mappa er
 mv.cancel=Haetta vid
 mv.delete=Eyda
 mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
 mv.file.deleted=Skr\u00E1nni var eytt
 mv.folder=Mappa
-mv.properties=properties
+mv.move=F\u00E6ra
+mv.properties=Eiginleikar
 mv.save=Vista
-mv.upload=Hlada inn
+mv.upload=Hla\u00F0a inn
 mv.use=Nota
 new_image=N\u00FD mynd
-uploader.window.select=
+uploader.window.select=Velja
 use_image=Nota mynd
 wrong_confirm=
