Further update from felix

--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -3,6 +3,7 @@ login_text=
 me.submit=Submit
 me.uploadtext=Select a file to upload.
 media_chooser_window.media_chooser=Media chooser
+mediafoldereditwindow.choose_folder_to_move_to=Choose a folder to move current file/folder to
 mediafoldereditwindow.folder.saved=Folder created
 mediafoldereditwindow.name.the.folder=Name the folder
 mediafoldereditwindow.properties=
@@ -31,6 +32,8 @@ mv.save=save
 mv.upload=upload
 mv.use=use
 new_image=New image
+select_folder=Select folder
+select_group=Select group
 uploader.window.select=
 use_image=Use image
 wrong_confirm=
