--- a/resources/is_IS.locale/Localized.strings
+++ b/resources/is_IS.locale/Localized.strings
@@ -2,6 +2,7 @@ close=Loka
 me.submit=Vista
 me.uploadtext=Veldu skr\u00E1 til a\u00F0 hla\u00F0a inn.
 media_chooser_window.media_chooser=Skr\u00E1arstj\u00F3ri
+mediafoldereditwindow.choose_folder_to_move_to=Veldu m\u00F6ppu til a\u00F0 f\u00E6ra vi\u00F0komandi skr\u00E1/m\u00F6ppu \u00ED
 mediafoldereditwindow.folder.saved=Mappa b\u00FAin til
 mediafoldereditwindow.name.the.folder=Nefndu m\u00F6ppuna
 mediafoldereditwindow.properties=Eiginleikar
@@ -19,8 +20,8 @@ mediafoldereditwindow.properties.size=St\u00E6r\u00F0
 mediafoldereditwindow.properties.type=Ger\u00F0
 mediaviewer.current_file=Valin skr\u00E1 er
 mediaviewer.current_folder=Valin mappa er
-mv.cancel=Haetta vid
-mv.delete=Eyda
+mv.cancel=H\u00E6tta vi\u00F0
+mv.delete=Ey\u00F0a
 mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
 mv.file.deleted=Skr\u00E1nni var eytt
 mv.folder=Mappa
@@ -30,6 +31,8 @@ mv.save=Vista
 mv.upload=Hla\u00F0a inn
 mv.use=Nota
 new_image=N\u00FD mynd
+select_folder=Veldu m\u00F6ppu
+select_group=Veldu h\u00F3p
 uploader.window.select=Velja
 use_image=Nota mynd
 wrong_confirm=
