--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -1,4 +1,5 @@
-close=Close
+close=
+login_text=
 me.submit=Submit
 me.uploadtext=Select a file to upload.
 media_chooser_window.media_chooser=Media chooser
@@ -26,7 +27,7 @@ mv.file.are.you.sure=Are you sure you want to delete this file
 mv.file.deleted=The file was deleted
 mv.folder=folder
 mv.move=move
-mv.properties=Properties
+mv.properties=
 mv.save=save
 mv.upload=upload
 mv.use=use
@@ -35,3 +36,4 @@ select_folder=Select folder
 select_group=Select group
 uploader.window.select=
 use_image=Use image
+wrong_confirm=
