--- a/resources/Localizable.strings
+++ b/resources/Localizable.strings
@@ -21,6 +21,11 @@ mediafoldereditwindow.properties.size=
 mediafoldereditwindow.properties.type=
 mediaviewer.current_file=The current file is
 mediaviewer.current_folder=The current folder is
+mimetype.window.close=CLOSE
+mimetype.window.description=Description
+mimetype.window.filetype=File type
+mimetype.window.save=SAVE
+mimetype.window.title=Add mimetype
 mv.cancel=cancel
 mv.delete=delete
 mv.file.are.you.sure=Are you sure you want to delete this file
@@ -34,6 +39,8 @@ mv.use=use
 new_image=New image
 select_folder=Select folder
 select_group=Select group
+uploader.window.nomimetype.firsthalf=The mimetype
+uploader.window.nomimetype.secondhalf=\ is not in the database.
 uploader.window.select=
 use_image=Use image
 wrong_confirm=
