--- a/resources/is_IS.locale/Localized.strings
+++ b/resources/is_IS.locale/Localized.strings
@@ -1,4 +1,5 @@
 close=Loka
+login_text=Innskr\u00E1ning
 me.submit=Vista
 me.uploadtext=Veldu skr\u00E1 til a\u00F0 hla\u00F0a inn.
 media_chooser_window.media_chooser=Skr\u00E1arstj\u00F3ri
@@ -14,12 +15,17 @@ mediafoldereditwindow.properties.metadata=L\u00FDsig\u00F6gn
 mediafoldereditwindow.properties.metadata.key=Lykill
 mediafoldereditwindow.properties.metadata.remove=Fjarl\u00E6gja
 mediafoldereditwindow.properties.metadata.value=Gildi
-mediafoldereditwindow.properties.mimetype=Ger\u00F0 (Mime-type)
+mediafoldereditwindow.properties.mimetype=MIME-ger\u00F0
 mediafoldereditwindow.properties.modified=Breytt
 mediafoldereditwindow.properties.size=St\u00E6r\u00F0
 mediafoldereditwindow.properties.type=Ger\u00F0
 mediaviewer.current_file=Valin skr\u00E1 er
 mediaviewer.current_folder=Valin mappa er
+mimetype.window.close=Loka
+mimetype.window.description=L\u00FDsing
+mimetype.window.filetype=Ger\u00F0 skr\u00E1ar
+mimetype.window.save=Vista
+mimetype.window.title=B\u00E6ta vi\u00F0 MIME-ger\u00F0
 mv.cancel=H\u00E6tta vi\u00F0
 mv.delete=Ey\u00F0a
 mv.file.are.you.sure=Ertu viss um a\u00F0 \u00FE\u00FA viljir ey\u00F0a \u00FEessari skr\u00E1?
@@ -33,6 +39,8 @@ mv.use=Nota
 new_image=N\u00FD mynd
 select_folder=Veldu m\u00F6ppu
 select_group=Veldu h\u00F3p
+uploader.window.nomimetype.firsthalf=MIME-ger\u00F0in
+uploader.window.nomimetype.secondhalf=er ekki til \u00ED gagnagrunninum
 uploader.window.select=Velja
 use_image=Nota mynd
-wrong_confirm=
+wrong_confirm=R\u00F6ng sta\u00F0festing
